# exercice

./: .gitignore  README.md  exercice.py  pyproject.toml  test.txt
.github/workflows/: github-actions.yml
tests/: test_calculs.py  test_decorateur.py  test_iterateur.py
utils/: calculs.py  decorateur.py  iterateur.py
